fix extension name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "fbit/fbit_berecordlist",
+    "name": "fbit/fbit-berecordlist",
     "type": "typo3-cms-extension",
     "description": "",
     "author": [],
